# osakana

./: .env  .env.example  Makefile  Pipfile  README.md  compose.yml  db.py  deps.py  labeling.py  main.py  scraper.py  settings.py
.github/: CODEOWNERS
_dashboard/: README.md  package.json
api/: errors.py
dashboard/: .env.example  .eslintrc.json  .prettierignore  Dockerfile  README.md  compose.yml  default.conf.template  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
db/: client.py  settings.py
engine/: .env.example  README.md  compose.yml
errors/: handlers.py  responses.py
hooks/: README.md  pre-commit.sh  setup.sh
lib/: scraper.py  (+1 more)
server/: .env.example  .flake8  .gitignore  Dockerfile  Pipfile  README.md  compose.yml  main.py  ngram.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  settings.py  tokenizer.py
server/api/errors/: docs.py  handlers.py  register.py  responses.py
server/api/routes/: ping.py  reading_list.py
server/api/routes/reading_list/: __init__.py  add.py  bookmark.py  counts.py  delete.py  export.py  fishing.py  import_.py  read.py  search.py  unread.py
server/api/schemas/: reading_list.py
server/db/: client.py  settings.py
server/db/migrations/: _01_create_reading_list_collection.py  base.py  run.py
server/db/models/: base.py  reading_list.py
server/db/repos/: base.py  reading_list.py
server/errors/: handlers.py
server/lib/: morphological_analysis.py  ngrams.py  timezone.py  web_scraping.py
server/services/: json_import.py  morphological_analysis.py
(+34 files in other folders)
